--- a/test/storybook/docs/Testing/Decorators/Prop/@Prop.mdx
+++ b/test/storybook/docs/Testing/Decorators/Prop/@Prop.mdx
@@ -260,8 +260,6 @@ Internal prop mutation behavior, covering both mutable=true and mutable=false sc
 
 ---
 
-## 📋 TODO - Remaining Test Cases
-
 export const PropTODOSection = () => {
   const testCaseStatus = overlay.testCaseStatus || {};
   const missingCases = Object.entries(testCaseStatus)
@@ -269,17 +267,7 @@ export const PropTODOSection = () => {
     .map(([id, tc]) => ({ id, desc: tc.description || `Test Case #${id}` }));
   
   if (missingCases.length === 0) {
-    return (
-      <div style={{ 
-        background: '#f0fdf4', 
-        padding: '16px', 
-        borderRadius: '8px', 
-        border: '2px solid #86efac',
-        marginBottom: '24px'
-      }}>
-        <strong>✓ All test cases implemented!</strong>
-      </div>
-    );
+    return null;
   }
   
   return (
@@ -293,7 +281,18 @@ export const PropTODOSection = () => {
   );
 };
 
-<PropTODOSection />
+{(() => {
+  const testCaseStatus = overlay.testCaseStatus || {};
+  const missingCases = Object.entries(testCaseStatus)
+    .filter(([_, tc]) => !tc.implemented);
+  if (missingCases.length === 0) return null;
+  return (
+    <>
+      <h2>📋 TODO - Remaining Test Cases</h2>
+      <PropTODOSection />
+    </>
+  );
+})()}
 
 ---
 
