--- a/test/storybook/docs/Testing/Decorators/Overview.mdx
+++ b/test/storybook/docs/Testing/Decorators/Overview.mdx
@@ -2,7 +2,7 @@ import componentData from './Component/coverage-data.json';
 import propData from './Prop/data/test-coverage.json';
 import stateData from './State/data/test-coverage.json';
 import eventData from './Event/data/test-coverage.json';
-import listenData from './Listen/coverage-data.json';
+import listenData from './Listen/data/test-coverage.json';
 import methodData from './Method/data/test-coverage.json';
 
 # Decorator Testing Overview
