--- a/test/storybook/docs/Testing/Behavior/Extends/Overview.mdx
+++ b/test/storybook/docs/Testing/Behavior/Extends/Overview.mdx
@@ -64,7 +64,7 @@ export const ExtendsCoverageSummary = () => {
           All tests passing ✓
         </div>
         <div style={{ fontSize: '11px', color: '#15803d', opacity: 0.8, borderTop: '1px solid #86efac', paddingTop: '8px', marginTop: '8px' }}>
-          📅 Last run: Nov 17, 2025, 6:18 PM PST</div>
+          📅 Last run: Nov 17, 2025, 6:24 PM PST</div>
       </div>
     </div>
   );
@@ -199,7 +199,7 @@ export const ExtendsTestCasesTable = () => {
       testCount: testCaseStatus[9]?.testCount || 0,
       section: testCaseStatus[9]?.implemented ? 'implemented' : 'missing',
     },
-    // 🔵 Advanced Reactive Controllers (12-12b)
+    // 🔵 Advanced Reactive Controllers (12-12a)
     {
       id: 12,
       implemented: testCaseStatus[12]?.implemented || false,
@@ -231,22 +231,6 @@ export const ExtendsTestCasesTable = () => {
       total: getGroupStats('direct-state').total,
       testCount: testCaseStatus['12a']?.testCount || 0,
       section: testCaseStatus['12a']?.implemented ? 'implemented' : 'missing',
-    },
-    {
-      id: '12b',
-      implemented: testCaseStatus['12b']?.implemented || false,
-      desc: testCaseStatus['12b']?.description || '',
-      types: (
-        <>
-          <strong>🔵 Advanced:</strong> ReactiveControllerHost Pattern (Composition-based controllers)<br/>
-          <strong>Composition Pattern:</strong> Components extend ReactiveControllerHost, compose ReactiveController instances<br/>
-          <small>Automatic lifecycle hooking with composition over inheritance | {formatTestCount(testCaseStatus['12b'])}</small>
-        </>
-      ),
-      tested: getGroupStats('via-host').tested,
-      total: getGroupStats('via-host').total,
-      testCount: testCaseStatus['12b']?.testCount || 0,
-      section: testCaseStatus['12b']?.implemented ? 'implemented' : 'missing',
     },
     // 🟢 Basic Inheritance (3-5) - TODO
     {
@@ -394,6 +378,23 @@ export const ExtendsTestCasesTable = () => {
       total: getGroupStats('ssr').total,
       testCount: testCaseStatus[16]?.testCount || 0,
       section: testCaseStatus[16]?.implemented ? 'implemented' : 'missing',
+    },
+    // 🔵 Advanced Composition Pattern (17)
+    {
+      id: 17,
+      implemented: testCaseStatus[17]?.implemented || false,
+      desc: testCaseStatus[17]?.description || '',
+      types: (
+        <>
+          <strong>🔵 Advanced:</strong> ReactiveControllerHost Pattern (Composition-based controllers)<br/>
+          <strong>Composition Pattern:</strong> Components extend ReactiveControllerHost, compose ReactiveController instances<br/>
+          <small>Automatic lifecycle hooking with composition over inheritance | {formatTestCount(testCaseStatus[17])}</small>
+        </>
+      ),
+      tested: getGroupStats('via-host').tested,
+      total: getGroupStats('via-host').total,
+      testCount: testCaseStatus[17]?.testCount || 0,
+      section: testCaseStatus[17]?.implemented ? 'implemented' : 'missing',
     }
   ];
 
@@ -412,7 +413,7 @@ Foundation patterns for lifecycle inheritance, property/state basics, method inh
 ### **🟡 Standard Patterns (6-11)** — 6 test cases
 Common inheritance scenarios including abstract classes, component-to-component, external libraries, mixins, event handling, and watch decorators.
 
-### **🔵 Advanced Real-World (12, 12a, 12b, 13-14)** — 5 test cases
+### **🔵 Advanced Real-World (12, 12a, 13-14, 17)** — 5 test cases
 Real-world reactive controller patterns comparing Stencil's extends capabilities with other frameworks like Lit, demonstrating practical use cases including composition-based ReactiveControllerHost pattern.
 
 ### **🔴 Robustness & Production (15-16)** — 2 test cases
